fix flexbox squishing img placeholder on smallest breakpoint

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
 }
 
 .placeholder-img {
-  width: 200px;
+  min-width: 200px;
   background-color: lightpink;
 }
 
@@ -52,7 +52,14 @@ footer {
 .project-img {
   background-color: lightpink;
   width: 100%;
-  height: 100px;
+  height: 200px;
+}
+
+.project-descr {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin: 1rem;
 }
 
 .projects {
@@ -71,12 +78,19 @@ footer {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+  .placeholder-img {
+    height: 200px;
+  }
+  .sub-header {
+    flex-direction: column;
+    height: 500px;
+  }
   .projects {
     grid-template-columns: 1fr;
   }
   header,
   main {
-    margin: 0 0;
+    margin: 0 32px;
   }
 }
